--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ concurrency:
 jobs:
   ci:
     if: ${{ !startsWith(github.ref, 'refs/tags') }}
-    name: Build, Lint, Test
+    name: Build, Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
