--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ concurrency:
 jobs:
   ci:
     if: ${{ !startsWith(github.ref, 'refs/tags') }}
-    name: Build, Lint
+    name: Build, Lint, Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -23,8 +23,11 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Install Lint Dependencies
-        run: pip install pylint
+      - name: Install Test/Lint Dependencies
+        run: pip install pytest pylint
 
       - name: Run Linter
         run: pylint plover_run_applescript
+
+      - name: Run Tests
+        run: pytest
