--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,2 @@
 [MAIN]
-ignored-modules=plover.machine.base,plover.registry,plover.engine,PyXA
+ignored-modules=plover.machine.base,plover.registry,plover.engine,plover.oslayer.config,PyXA
