--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 name = plover_run_applescript
 url = https://github.com/paulfioravanti/plover-run-applescript
-version = 0.2.3
+version = 0.3.0
 
 # NOTE: mac-pyxa has to be pinned at version 0.0.9 due to later versions using
 # Python 3.10 syntax that Plover doesn't yet support (Plover's internal version
@@ -30,6 +30,9 @@ setup_requires =
 zip_safe = True
 packages =
     plover_run_applescript
+    plover_run_applescript.applescript
+    plover_run_applescript.config
+    plover_run_applescript.path
 
 [options.entry_points]
 plover.extension =
