Exclude PyXA wrapper modules from test coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,3 +40,7 @@ plover.extension =
 
 [tool:pytest]
 pythonpath = plover_run_applescript
+
+[coverage:run]
+omit =
+    plover_run_applescript/applescript/*
