--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
   pypi-publish:
     if: ${{ startsWith(github.ref, 'refs/tags') }}
     name: Build, Lint, Test, Release to PyPI
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     environment:
       name: release
       url: https://pypi.org/project/plover-run-applescript/
