--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
   pypi-publish:
     if: ${{ startsWith(github.ref, 'refs/tags') }}
     name: Build, Lint, Test, Release to PyPI
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     environment:
       name: release
       url: https://pypi.org/project/plover-run-applescript/
@@ -24,18 +24,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
-
-      - name: Install Test/Lint Dependencies
-        # Ensure that PyXA is installed as a test dependency
-        run: |
-          pip install pytest pytest-mock pylint
-          pip install -e ".[test]"
-
-      - name: Run Linter
-        run: pylint plover_run_applescript
-
-      - name: Run Tests
-        run: pytest
 
       - name: Install Build
         run: python -m pip install --upgrade build
