--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 name = plover_run_applescript
 url = https://github.com/paulfioravanti/plover-run-applescript
-version = 0.3.0
+version = 0.3.1
 
 # NOTE: mac-pyxa has to be pinned at version 0.0.9 due to later versions using
 # Python 3.10 syntax that Plover doesn't yet support (Plover's internal version
@@ -44,3 +44,12 @@ pythonpath = plover_run_applescript
 [coverage:run]
 omit =
     plover_run_applescript/applescript/*
+
+[mypy]
+strict = True
+
+[mypy-plover.*]
+ignore_missing_imports = True
+
+[mypy-PyXA]
+ignore_missing_imports = True
