--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
   # Adapted from: https://github.com/pypa/gh-action-pypi-publish#usage
   pypi-publish:
     if: ${{ startsWith(github.ref, 'refs/tags') }}
-    name: Build, Lint, Test, Release to PyPI
+    name: Build, Release to PyPI
     runs-on: ubuntu-latest
     environment:
       name: release
