Move extras_require into setup.cfg file and declare test dependencies there

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,15 @@ packages =
 plover.extension =
     plover_run_applescript = plover_run_applescript.extension:RunAppleScript
 
+[options.extras_require]
+test =
+    coverage
+    mypy
+    pmac-pyxa == 0.0.9
+    pylint
+    pytest
+    pytest-cov
+
 [tool:pytest]
 pythonpath = plover_run_applescript
 
