Fix dependency typo

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,8 +41,8 @@ plover.extension =
 [options.extras_require]
 test =
     coverage
+    mac-pyxa == 0.0.9
     mypy
-    pmac-pyxa == 0.0.9
     pylint
     pytest
     pytest-cov
