Ignore deprecations coming out of the PyXA library

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,8 @@
 # `asyncio_default_fixture_loop_scope`
 [pytest]
 asyncio_default_fixture_loop_scope = function
+# Ignore issues related to deprecated calls in the PyXA library.
+# REF: https://docs.pytest.org/en/stable/how-to/capture-warnings.html#controlling-warnings
+filterwarnings =
+    ignore:pkg_resources is deprecated as an API:DeprecationWarning
+    ignore:Deprecated call to `pkg_resources\.declare_namespace\(\'PyObjCTools\'\)`:DeprecationWarning
