--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,9 @@ jobs:
   github-release:
     name: GitHub Release
     runs-on: ubuntu-latest
+    needs:
+      - pypi-publish
+    if: always() && needs.pypi-publish.result == 'success'
     permissions:
       contents: write
     steps:
