--- a/.pylintrc
+++ b/.pylintrc
@@ -1,7 +1,7 @@
-[MAIN]
+[TYPECHECK]
 ignored-modules =
-    plover.engine
-    plover.machine.base
-    plover.oslayer.config
-    plover.registry
+    plover.engine,
+    plover.machine.base,
+    plover.oslayer.config,
+    plover.registry,
     PyXA
