Migrate to src layout

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,3 +9,4 @@ asyncio_default_fixture_loop_scope = function
 filterwarnings =
     ignore:pkg_resources is deprecated as an API:DeprecationWarning
     ignore:Deprecated call to `pkg_resources\.declare_namespace\(\'PyObjCTools\'\)`:DeprecationWarning
+pythonpath = src
