--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 name = plover_run_applescript
 url = https://github.com/paulfioravanti/plover-run-applescript
-version = 0.3.11
+version = 0.3.12
 
 # NOTE: mac-pyxa has to be pinned at version 0.0.9 due to later versions using
 # Python 3.10 syntax that Plover doesn't yet support (Plover's internal version
@@ -28,11 +28,9 @@ install_requires =
 setup_requires =
     setuptools >= 30.3.0
 zip_safe = True
-packages =
-    plover_run_applescript
-    plover_run_applescript.applescript
-    plover_run_applescript.config
-    plover_run_applescript.path
+package_dir =
+    = src
+packages = find:
 
 [options.entry_points]
 plover.extension =
@@ -48,8 +46,8 @@ test =
     pytest-cov
     pytest-mock
 
-[tool:pytest]
-pythonpath = plover_run_applescript
+[options.packages.find]
+where = src
 
 [coverage:run]
 omit =
