--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,10 +27,10 @@ jobs:
         run: pip install -e ".[test]"
 
       - name: Run Linter
-        run: pylint plover_run_applescript
+        run: pylint src
 
       - name: Run Type Checker
-        run: mypy plover_run_applescript
+        run: mypy src
 
       - name: Run Tests
         run: pytest
